examples/test/testpolicy2005.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2005
  namespace: namespace289
spec:
  podSelector:
    matchLabels:
      key16: value24
      key24: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value22
          key36: value4
      podSelector:
        matchLabels:
          key45: value24
